src/lacr-demo/app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require bootstrap_and_overrides
 *= require font-awesome
 *= require typeaheadjs.css
 *= require documents.scss
 *= require home.scss
 *= require search.scss
 *= require jquery.fullPage.css
 *= require_self
 */

body{
    padding-top: 70px;
    padding-bottom: 30px;
}
 /*Sticky the foother to bottom of the page*/
 footer p{
   margin: 0;
   padding: 0;
 }
mark{
 font-style: italic;
 background: #A9E2F3;
}

 .footer {
     width:100%;
     min-height:30px;
     background: #f2f2f2;
     border-top: 1px solid #e4e4e4;
     color:#222;
     font-size:12px;
 }

 /*The style for the menu*/
 .navbar-default {
   background-color: #eaeaea;
   border-color: #eaeaea;
 }
 .navbar-default .navbar-brand {
   color: #666666;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
   color: #3276ac;
 }
 .navbar-default .navbar-text {
   color: #666666;
 }
 .navbar-default .navbar-nav > li > a {
   color: #666666;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
   color: #3276ac;
 }
 .navbar-default .navbar-nav > li > .dropdown-menu {
   background-color: #eaeaea;
 }
 .navbar-default .navbar-nav > li > .dropdown-menu > li > a {
   color: #666666;
 }
 .navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover,
 .navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
   color: #3276ac;
   background-color: #eaeaea;
 }
 .navbar-default .navbar-nav > li > .dropdown-menu > li > .divider {
   background-color: #eaeaea;
 }
 .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
 .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
 .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
   color: #3276ac;
   background-color: #eaeaea;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
   color: #3276ac;
   background-color: #eaeaea;
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
   color: #3276ac;
   background-color: #eaeaea;
 }
 .navbar-default .navbar-toggle {
   border-color: #eaeaea;
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
   background-color: #eaeaea;
 }
 .navbar-default .navbar-toggle .icon-bar {
   background-color: #666666;
 }
 .navbar-default .navbar-link {
   color: #666666;
 }
 .navbar-default .navbar-link:hover {
   color: #3276ac;
 }

 @media (max-width: 767px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
     color: #666666;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
     color: #3276ac;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #3276ac;
     background-color: #eaeaea;
   }
 }

 /*The list of links on the left side of the page */
 .nav > div > a {
   display: block;
   padding: 3px 15px;
   font-size: 12px;
   font-weight: bold;
   line-height: 20px;
   color: #999999;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
 }

 .nav-list > li > a {
   padding: 3px 15px;
 }

 .nav-list > .active > a,
 .nav-list > .active > a:hover,
 .nav-list > .active > a:focus {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
   background-color: #0088cc;
 }

 .sidebar-nav .nav {
   list-style: none;
   position: absolute;
   top: 100%;
   left: 0;
   z-index: 1000;
   float: left;
   min-width: 140px;
   max-width: 140px;
   max-height: 500px;
   overflow-y: auto;
   padding:0;
   margin: 0;
   font-size: 14px;
   text-align: left;
   background-color: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
 }

/*Small box for Upload files*/
 .center-box-sm{
   display: inline-block;
   width: 400px;
   text-align: left;
 }

.main-container{
  margin-top: 40px;
  margin-bottom: 40px;
}

.vcenter {
  display: table-cell;
	vertical-align: middle;
	float: none;
}
#navbar-collapse-search .navbar-form{
  /*Fix overflow on small screen*/
  margin-right: 0;
}

